fix: ?long titles overlapping content div

--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,9 @@ font-family: 'Ubuntu', sans-serif; */
 
 .card-container__content__title h1 {
   color: rgb(41, 39, 39);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .card-container__content__body p {
@@ -462,7 +465,12 @@ font-family: 'Ubuntu', sans-serif; */
 
 .blog-post__content__title {
   margin-top: 1em;
-  font-size: 1.2rem;
+  height: auto;
+  word-wrap: break-word;
+}
+
+.blog-post__content__title h1 {
+  font-size: 3rem;
 }
 
 .blog-post__content__author {
@@ -502,7 +510,7 @@ font-family: 'Ubuntu', sans-serif; */
   font-weight: 400;
   line-height: 1.6em;
   display: flex;
-  align-items: flex-end ;
+  align-items: flex-end;
 }
 
 .blog-post__content__body p {
@@ -630,9 +638,11 @@ font-family: 'Ubuntu', sans-serif; */
   .home-container {
     width: 80%;
   }
+
   .card-container {
     width: 100%;
   }
+
   .user-form {
     width: 90%;
   }
@@ -731,6 +741,7 @@ font-family: 'Ubuntu', sans-serif; */
     color: rgb(41, 39, 39);
     font-size: 1.6rem;
   }
+
   .card-container__content__title p {
     font-size: 4rem;
   }
@@ -742,6 +753,7 @@ font-family: 'Ubuntu', sans-serif; */
   .card-container__content__footer p {
     font-size: .8rem;
   }
+
   .card-container {
     width: 90%;
   }
